Se carga la generacion de la programacion

--- a/gepsac/gepsac-backoffice/src/main/resources/com/novatronic/sca/ApplicationResource.properties
+++ b/gepsac/gepsac-backoffice/src/main/resources/com/novatronic/sca/ApplicationResource.properties
@@ -100,3 +100,4 @@ menu.modulo.templateImportar.buscar=Mantenimiento Menu10
 opcion.volver.login=Volver a Login.
 opcion.error.mensaje.noexiste=Ocurri\u00f3 un error general con el Sistema.
 opcion.error.mensaje.titulo=Lo Sentimos ... 
+opcion.volver=Volver
