--- a/gepsac/gepsac-dao/pom.xml
+++ b/gepsac/gepsac-dao/pom.xml
@@ -20,5 +20,10 @@
             <artifactId>mybatis</artifactId>
             <version>3.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gepsac-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
