--- a/gepsac/gepsac-parent/pom.xml
+++ b/gepsac/gepsac-parent/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.12</version>
+            <version>1.6.1</version>
         </dependency>
         <!--<dependency>
             <groupId>org.slf4j</groupId>
@@ -29,18 +29,18 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.12</version>
+            <version>1.6.1</version>
         </dependency>
         <dependency>        
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>gepsac-model</artifactId>
             <version>${project.version}</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 	
 </project>
