Camibos de diseño y arquitectura

--- a/gepsac/gepsac-backoffice/src/main/resources/com/novatronic/sca/ApplicationResource.properties
+++ b/gepsac/gepsac-backoffice/src/main/resources/com/novatronic/sca/ApplicationResource.properties
@@ -33,10 +33,10 @@ welcome.heading=Struts Applications in Netbeans!
 welcome.message=It's easy to create Struts applications with NetBeans.
 
 ######PRINCIPAL###
-principal.title=SISTEMA GESTI\u00d3N PSICOL\u00d3GICA ACAD\u00c9MICA
+principal.title=SISTEMA DE GESTI\u00d3N DE PSICOLOG\u00cdA ACAD\u00c9MICA
 
 ######HEADER######
-header.title=SISTEMA GESTI\u00d3N PSICOL\u00d3GICA ACAD\u00c9MICA
+header.title=SISTEMA DE GESTI\u00d3N DE PSICOLOG\u00cdA ACAD\u00c9MICA
 header.usuario=USUARIO
 header.salir=Cerrar sesi\u00f3n
 header.usuario.cambiar.clave=Cambiar contrase\u00f1a
