Se carga un avance de la red neuronal para predecir el perfil de un alumno
Se carga un avance de la red neuronal para predecir el perfil de un
alumno

--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,4 @@ nb-configuration.xml
 /gepsac/gepsac-proxyws/target/
 /gepsac/gepsac-backoffice/target/
 /gepsac/gepsac-controller-struts/target/
+/gepsac/gepsac-rna/target/
