--- a/gepsac/pom.xml
+++ b/gepsac/pom.xml
@@ -17,6 +17,8 @@
         <module>gepsac-controller-module</module>
         <module>gepsac-dao</module>
         <module>gepsac-proxyws</module>
+        <module>gepsac-experto</module>
+        <module>gepsac-rna</module>
     </modules>
 
 </project>
