Se carga el avance de rna para la evaluacion de alumno postulante

--- a/.gitignore
+++ b/.gitignore
@@ -236,3 +236,4 @@ nb-configuration.xml
 /gepsac/gepsac-backoffice/target/
 /gepsac/gepsac-controller-struts/target/
 /gepsac/gepsac-rna/target/
+/gepsac/gepsac-experto/target/
