--- a/gepsac/gepsac-dao/pom.xml
+++ b/gepsac/gepsac-dao/pom.xml
@@ -21,6 +21,11 @@
             <version>3.3.0</version>
         </dependency>
         <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901.jdbc4</version>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>gepsac-model</artifactId>
             <version>${project.version}</version>
