--- a/gepsac/gepsac-experto/DatabaseUtils.props
+++ b/gepsac/gepsac-experto/DatabaseUtils.props
@@ -12,7 +12,7 @@
 jdbcDriver=org.postgresql.Driver
 
 # database URL
-jdbcURL=jdbc:postgresql://localhost:5432/test
+jdbcURL=jdbc:postgresql://localhost:5432/gepsac
 
 # specific data types
 # string, getString() = 0;    --> nominal
