Capa de Modelo y Servicio
Se carga la integracion con la capa modelo y se expone mediante servicio
web el modulo expero

--- a/gepsac/gepsac-service/pom.xml
+++ b/gepsac/gepsac-service/pom.xml
@@ -86,6 +86,11 @@
             <artifactId>gepsac-controller-module</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.sacooliveros.gepsac.service</groupId>
+            <artifactId>gepsac-experto</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
