--- a/gepsac/gepsac-experto/DatabaseUtils.props
+++ b/gepsac/gepsac-experto/DatabaseUtils.props
@@ -13,6 +13,7 @@ jdbcDriver=org.postgresql.Driver
 
 # database URL
 jdbcURL=jdbc:postgresql://localhost:5432/gepsac
+#jdbcURL=jdbc:postgresql://localhost:5432/test
 
 # specific data types
 # string, getString() = 0;    --> nominal
