Capa Servicio Saco Oliveros
Se implementa el simulador para el listado de alumnos postulantes y la
obtención por medio de un codigo

--- a/.gitignore
+++ b/.gitignore
@@ -237,3 +237,4 @@ nb-configuration.xml
 /gepsac/gepsac-controller-struts/target/
 /gepsac/gepsac-rna/target/
 /gepsac/gepsac-experto/target/
+/gepsac/AlumnoService/target/
