Capa Servicio, Controladora
Se actualiza el log4j para la configuracion de envio correo
Se actualiza los proxies para el servicio experto

--- a/gepsac/gepsac-proxyws/pom.xml
+++ b/gepsac/gepsac-proxyws/pom.xml
@@ -37,6 +37,8 @@
                     <wsdlFiles>
                         <wsdlFile>PlanificacionService.xml</wsdlFile>
                         <wsdlFile>ComunService.xml</wsdlFile>
+                        <wsdlFile>ExpertoService.xml</wsdlFile>
+                        <!--<wsdlFile>WebServiceAlumno.xml</wsdlFile>-->
                     </wsdlFiles>
                     <sourceDestDir>src/main/java</sourceDestDir>
                     <extension>true</extension>
