--- a/gepsac/gepsac-dao/pom.xml
+++ b/gepsac/gepsac-dao/pom.xml
@@ -21,9 +21,9 @@
             <version>3.3.0</version>
         </dependency>
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.1-901.jdbc4</version>
+            <version>9.3-1104-jdbc41</version>
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
