--- a/gepsac/gepsac-backoffice/pom.xml
+++ b/gepsac/gepsac-backoffice/pom.xml
@@ -29,12 +29,44 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
-            </plugin>                    
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.1.1</version>
+                <configuration>
+                    <workDirectory>target/overlay-war-folder</workDirectory>
+                    <overlays>
+                        <overlay>
+                            <groupId>com.sacooliveros.gepsac</groupId>
+                            <artifactId>template-form</artifactId>
+                        </overlay>
+                        <overlay>
+                            <groupId>com.sacooliveros.gepsac</groupId>
+                            <artifactId>experto-form</artifactId>
+                        </overlay>
+                    </overlays>
+                </configuration>
+            </plugin>       
         </plugins>
     </build>
 	
     <dependencies>  
 	
+        <dependency>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>template-form</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+	
+        <dependency>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>experto-form</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        
         <!--1. Servidor de aplicaciones-->
         <dependency>
             <groupId>javax.servlet</groupId>
