--- a/gepsac/gepsac-proxyws/pom.xml
+++ b/gepsac/gepsac-proxyws/pom.xml
@@ -30,15 +30,17 @@
                 <configuration>
                     <!--<wsdlDirectory>${basedir}/src/main/resource/wsdl</wsdlDirectory>-->
                     <packageName>com.sacooliveros.gepsac.proxyws</packageName>
-                    <!--<wsdlUrls>
+                    <wsdlUrls>
                         <wsdlUrl>http://localhost:8180/gepsac-service/PlanificacionService?wsdl</wsdlUrl>
-                        <wsdlUrl>http://localhost:8180/gepsac-service/CommonService?wsdl</wsdlUrl>
-                    </wsdlUrls>-->
+                        <wsdlUrl>http://localhost:8180/gepsac-service/ComunService?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8180/gepsac-service/BOService?wsdl</wsdlUrl>
+                        <wsdlUrl>http://localhost:8180/WebServiceIntranet/WebServiceAlumno?wsdl</wsdlUrl>
+                    </wsdlUrls>
                     <wsdlFiles>
-                        <wsdlFile>PlanificacionService.xml</wsdlFile>
+                        <!--<wsdlFile>PlanificacionService.xml</wsdlFile>
                         <wsdlFile>ComunService.xml</wsdlFile>
                         <wsdlFile>ExpertoService.xml</wsdlFile>
-                        <!--<wsdlFile>WebServiceAlumno.xml</wsdlFile>-->
+                        <wsdlFile>WebServiceAlumno.xml</wsdlFile>-->
                     </wsdlFiles>
                     <sourceDestDir>src/main/java</sourceDestDir>
                     <extension>true</extension>
