--- a/gepsac/gepsac-service/pom.xml
+++ b/gepsac/gepsac-service/pom.xml
@@ -102,6 +102,11 @@
             <artifactId>activation</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.1_3</version>
+        </dependency>
     </dependencies>
 
 </project>
