CUS Evaluar Respuesta Acoso Escolar
Generador del instalador

--- a/.gitignore
+++ b/.gitignore
@@ -242,3 +242,4 @@ nb-configuration.xml
 /gepsac/template-form/target/
 /gepsac/gepsac-dao/nbproject/
 /gepsac/gepsac-evaluador/target/
+/gepsac/scjrec-installer/target/
