Se carga el servicio rest

--- a/gepsac/gepsac-service/pom.xml
+++ b/gepsac/gepsac-service/pom.xml
@@ -87,8 +87,8 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.sacooliveros.gepsac.service</groupId>
-            <artifactId>gepsac-experto</artifactId>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>gepsac-service-rs</artifactId>
             <version>${project.version}</version>
         </dependency>
         <!--Para envio de mensaje smtp-->
