--- a/.gitignore
+++ b/.gitignore
@@ -244,3 +244,4 @@ nb-configuration.xml
 /gepsac/gepsac-evaluador/target/
 /gepsac/scjrec-installer/target/
 /gepsac/gepsac-evaluador-installer/target/
+/gepsac/gepsac-service-rs/target/
