Se carga el caso de uso Evaluar Alumno Postulantes - Masivo

--- a/gepsac/gepsac-evaluador/pom.xml
+++ b/gepsac/gepsac-evaluador/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>gepsac-experto</artifactId>
             <version>${project.version}</version>
         </dependency>    
+        <dependency>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>gepsac-proxyws</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 </project>
