--- a/gepsac/gepsac-evaluador-installer/src/main/gepsac/config/evaluador/broker.properties
+++ b/gepsac/gepsac-evaluador-installer/src/main/gepsac/config/evaluador/broker.properties
@@ -10,3 +10,11 @@ ControllerThreads=1
 
 # Nombre servidor SIX
 SIXServer=GWSPPVNX
+
+#Evaluadores Disponibles
+#ALUMNO: Evaluacion de Alumno Postulante
+#EVALUACION: Evaluacion de Respuesta de Acoso Escolar
+BrokerTypes=ALUMNO,EVALUACION
+
+#Timeout de los servicios
+proxy.timeout=10000
