Se sepera el proyecto web service

--- a/.gitignore
+++ b/.gitignore
@@ -245,3 +245,4 @@ nb-configuration.xml
 /gepsac/scjrec-installer/target/
 /gepsac/gepsac-evaluador-installer/target/
 /gepsac/gepsac-service-rs/target/
+/gepsac/gepsac-service-ws/target/
