--- a/gepsac/gepsac-service-ws/pom.xml
+++ b/gepsac/gepsac-service-ws/pom.xml
@@ -7,21 +7,26 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>../gepsac-parent/pom.xml</relativePath>
     </parent>
-    <artifactId>gepsac-service-rs</artifactId>
+    <artifactId>gepsac-service-ws</artifactId>
     <packaging>jar</packaging>
-    <name>gepsac-service-rs</name>
+    <name>gepsac-service-ws</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-     
-    <dependencies>        
+
+    <dependencies>
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.0</version>
+            <groupId>javax.xml.ws</groupId>
+            <artifactId>jaxws-api</artifactId>
+            <version>2.2.11</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>gepsac-controller-module</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.sacooliveros.gepsac.service</groupId>
