--- a/gepsac/gepsac-service/pom.xml
+++ b/gepsac/gepsac-service/pom.xml
@@ -76,14 +76,8 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>javax.xml.ws</groupId>
-            <artifactId>jaxws-api</artifactId>
-            <version>2.2.11</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>gepsac-controller-module</artifactId>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>gepsac-service-ws</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
