--- a/.gitignore
+++ b/.gitignore
@@ -227,6 +227,7 @@ nbdist/
 nbactions.xml
 nb-configuration.xml
 .nb-gradle/
+*.log*
 /gepsac/gepsac-model/target/
 /gepsac/gepsac-dao/target/
 /gepsac/gepsac-controller-module/target/
