--- a/gepsac/gepsac-backoffice/pom.xml
+++ b/gepsac/gepsac-backoffice/pom.xml
@@ -47,6 +47,10 @@
                             <groupId>com.sacooliveros.gepsac</groupId>
                             <artifactId>experto-form</artifactId>
                         </overlay>
+                        <overlay>
+                            <groupId>com.sacooliveros.gepsac</groupId>
+                            <artifactId>evaluacion-form</artifactId>
+                        </overlay>
                     </overlays>
                 </configuration>
             </plugin>       
@@ -65,6 +69,13 @@
         <dependency>
             <groupId>com.sacooliveros.gepsac</groupId>
             <artifactId>experto-form</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <type>war</type>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.sacooliveros.gepsac</groupId>
+            <artifactId>evaluacion-form</artifactId>
             <version>1.0-SNAPSHOT</version>
             <type>war</type>
         </dependency>
