--- a/gepsac/evaluacion-form/pom.xml
+++ b/gepsac/evaluacion-form/pom.xml
@@ -55,6 +55,11 @@
             <artifactId>struts-extras</artifactId>
             <version>${struts.version}</version>
         </dependency>
+       <dependency>
+           <groupId>${project.groupId}</groupId>
+           <artifactId>gepsac-model</artifactId>
+           <version>${project.version}</version>
+       </dependency>
     </dependencies>
 
 
