--- a/gepsac/gepsac-evaluador-installer/src/main/gepsac/config/evaluador/broker.properties
+++ b/gepsac/gepsac-evaluador-installer/src/main/gepsac/config/evaluador/broker.properties
@@ -14,7 +14,10 @@ SIXServer=GWSPPVNX
 #Evaluadores Disponibles
 #ALUMNO: Evaluacion de Alumno Postulante
 #EVALUACION: Evaluacion de Respuesta de Acoso Escolar
-BrokerTypes=ALUMNO,EVALUACION
+BrokerTypes=ALUMNO,EVALUACION,SOLICITUD_PSICOLOGICA
 
 #Timeout de los servicios
 proxy.timeout=10000
+
+#Solo para la revision de Solicitudes Psicologicas
+solicitudPsicologica.maxMinutosPendiente=30
